<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>simekva</groupId>
	<artifactId>minesweeper</artifactId>
	<version>0.0.1-SNAPSHOT</version>
  
  <dependencies>
	<!-- JavaFX FXML -->
  	<dependency>
  		<groupId>org.openjfx</groupId>
		<artifactId>javafx-fxml</artifactId>
		<version>16-ea+5</version>
  	</dependency>

	<!-- JUnit 5 -->
	<dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.7.0</version>
	</dependency>

	<dependency>
		<groupId>org.junit</groupId>
		<artifactId>junit-bom</artifactId>
		<version>5.7.0</version>
		<type>pom</type>
		<scope>import</scope>
	</dependency>
  </dependencies>

  <build>
	<plugins>
	  <plugin>
		<artifactId>maven-compiler-plugin</artifactId>
		<version>3.8.1</version>
		<configuration>
			<source>1.9</source>
			<target>1.9</target>
		</configuration>
	  </plugin>
	  <plugin>
		  <artifactId>maven-surefire-plugin</artifactId>
		  <version>3.0.0-M5</version>
		  <configuration>
			  <argLine>--enable-preview</argLine>
		  </configuration>
	  </plugin>
	  <plugin>
		  <artifactId>maven-failsafe-plugin</artifactId>
		  <version>3.0.0-M5</version>
		  <configuration>
			  <argLine>--enable-preview</argLine>
		  </configuration>
	  </plugin>
	  <plugin>
		<groupId>org.openjfx</groupId>
		<artifactId>javafx-maven-plugin</artifactId>
		<version>0.0.8</version>
		<configuration>
			<mainClass>minesweeper.minesweeperApp</mainClass>
		</configuration>
	  </plugin>
	</plugins>
  </build>
</project>
